Adding CanDo Landing as an Iframe

--- a/packages/.gitignore
+++ b/packages/.gitignore
@@ -12,3 +12,11 @@
 /tutorials
 /jqueryui
 /jquery.autocomplete
+/momentjs
+/parsleyjs
+/connect
+/bootstrap-3
+/bootstrap-growl
+/iron-router
+/x-editable-bootstrap3
+/jquery.autocomplete
